Revert system data loader changes