@@ -10,7 +10,6 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -26,7 +25,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.support.ResourcePatternResolver;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import org.tdl.vireo.model.ControlledVocabulary;
 import org.tdl.vireo.model.DefaultConfiguration;
 import org.tdl.vireo.model.Degree;
@@ -85,8 +83,6 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.type.CollectionType;
-import com.fasterxml.jackson.databind.type.TypeFactory;
 
 @Service
 public class SystemDataLoader {
@@ -185,7 +181,6 @@ public class SystemDataLoader {
     @Autowired
     private DefaultSettingsService defaultSettingsService;
 
-    @Transactional
     public void loadSystemData() {
 
         logger.info("Loading default languages");
@@ -599,43 +594,21 @@ public class SystemDataLoader {
     }
 
     private void loadSubmissionStatuses() {
+
         try {
-            File statusesFile = getFileFromResource("classpath:/submission_statuses/SYSTEM_Submission_Statuses.json");
-            File transitionsFile = getFileFromResource("classpath:/submission_statuses/SYSTEM_Submission_Statuses_Transitions.json");
-
             // read and map json to SubmissionStatus
-            TypeFactory tf = TypeFactory.defaultInstance();
-            CollectionType type = tf.constructCollectionType(ArrayList.class, SubmissionStatus.class);
-            List<SubmissionStatus> systemSubmissionStatuses = objectMapper.readValue(statusesFile, type);
+            SubmissionStatus systemSubmissionStatus = objectMapper.readValue(getFileFromResource("classpath:/submission_statuses/SYSTEM_Submission_Statuses.json"), SubmissionStatus.class);
 
-            systemSubmissionStatuses.forEach(ss -> {
-                SubmissionStatus found = submissionStatusRepo.findByName(ss.getName());
+            // check to see if the SubmissionStatus exists
+            SubmissionStatus newSubmissionStatus = submissionStatusRepo.findByName(systemSubmissionStatus.getName());
 
-                if (found == null) {
-                    ss.setTransitionSubmissionStatuses(new ArrayList<>());
-                    found = submissionStatusRepo.create(ss.getName(), ss.isArchived(), ss.isPublishable(), ss.isDeletable(), ss.isEditableByReviewer(), ss.isEditableByStudent(), ss.isActive(), ss.getSubmissionState());
-                }
-            });
+            // create new SubmissionStatus if not already exists
+            if (newSubmissionStatus == null) {
+                newSubmissionStatus = submissionStatusRepo.create(systemSubmissionStatus.getName(), systemSubmissionStatus.isArchived(), systemSubmissionStatus.isPublishable(), systemSubmissionStatus.isDeletable(), systemSubmissionStatus.isEditableByReviewer(), systemSubmissionStatus.isEditableByStudent(), systemSubmissionStatus.isActive(), systemSubmissionStatus.getSubmissionState());
 
-            type = tf.constructCollectionType(ArrayList.class, HashMap.class);
-            List<HashMap<?, ?>> transitions = objectMapper.readValue(transitionsFile, type);
-
-            for (Map<?, ?> transition : transitions) {
-                List<SubmissionStatus> list = new ArrayList<>();
-                Long transitionId = ((Integer) transition.get("id")).longValue();
-                SubmissionStatus ss = submissionStatusRepo.findById(transitionId).get();
-
-                for (Object idObject : (ArrayList<?>) transition.get("transitionSubmissionStatuses")) {
-                    Long id = ((Integer) idObject).longValue();
-                    Optional<SubmissionStatus> submissionStatus = submissionStatusRepo.findById(id);
-                    if (submissionStatus.isPresent()) {
-                        list.add(submissionStatus.get());
-                    }
-                }
-
-                ss.setTransitionSubmissionStatuses(list);
-                submissionStatusRepo.save(ss);
+                newSubmissionStatus = submissionStatusRepo.save(recursivelyFindOrCreateSubmissionStatus(systemSubmissionStatus));
             }
+
         } catch (IOException e) {
             throw new IllegalStateException("Unable to generate system organization", e);
         }
@@ -982,7 +955,7 @@ public class SystemDataLoader {
 
                 FieldPredicate dbFieldPredicate = fieldPredicateRepo.findByValue(fieldPredicate.getValue());
                 if (dbFieldPredicate == null) {
-                    dbFieldPredicate = fieldPredicateRepo.create(fieldPredicate.getValue(), new Boolean(true));
+                    dbFieldPredicate = fieldPredicateRepo.create(fieldPredicate.getValue(), Boolean.valueOf(true));
                 } else {
                     dbFieldPredicate.setValue(fieldPredicate.getValue());
                     dbFieldPredicate.setDocumentTypePredicate(fieldPredicate.getDocumentTypePredicate());
@@ -1081,7 +1054,9 @@ public class SystemDataLoader {
                     while (cellIterator.hasNext()) {
 
                         Cell cell = cellIterator.next();
+
                         if (cell.getCellType() == CellType.STRING) {
+
                             String cellValue = cell.getStringCellValue();
                             if (code == null) {
                                 code = cellValue;
